--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
-<nav>
-    <a routerLink="/events">Events List</a> | 
-    <a routerLink="/add-event">Add Event</a>
-  </nav>
-  <router-outlet></router-outlet>
-  
+<div class=" container col m-5 bg-light p-3">
+  <div class="">
+    <app-navbar></app-navbar>
+  </div>
+  <div class="col">
+    <router-outlet></router-outlet>
+  </div>
+</div>
